tests/ui/thread-local/thread-local-static.stderr
error[E0133]: use of mutable static is unsafe and requires unsafe function or block
  --> $DIR/thread-local-static.rs:11:28
   |
LL |     std::mem::swap(x, &mut STATIC_VAR_2)
   |                            ^^^^^^^^^^^^ use of mutable static
   |
   = note: mutable statics can be mutated by multiple threads: aliasing violations or data races will cause undefined behavior

error[E0658]: mutable references are not allowed in constant functions
  --> $DIR/thread-local-static.rs:9:12
   |
LL | const fn g(x: &mut [u32; 8]) {
   |            ^
   |
   = note: see issue #57349 <https://github.com/rust-lang/rust/issues/57349> for more information
   = help: add `#![feature(const_mut_refs)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0625]: thread-local statics cannot be accessed at compile-time
  --> $DIR/thread-local-static.rs:11:28
   |
LL |     std::mem::swap(x, &mut STATIC_VAR_2)
   |                            ^^^^^^^^^^^^

error[E0658]: mutable references are not allowed in constant functions
  --> $DIR/thread-local-static.rs:11:23
   |
LL |     std::mem::swap(x, &mut STATIC_VAR_2)
   |                       ^^^^^^^^^^^^^^^^^
   |
   = note: see issue #57349 <https://github.com/rust-lang/rust/issues/57349> for more information
   = help: add `#![feature(const_mut_refs)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0133, E0625, E0658.
For more information about an error, try `rustc --explain E0133`.
